--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,10 +1,15 @@
+@font-face {
+   font-family: 'Press Start 2P';
+   src: url('/assets/PressStart2P-Regular.ttf');
+}
+
 body {
   background-color: #fff;
   color: #333;
   margin: 33px; }
 
 body, p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
+  font-family: 'Press Start 2P';
   font-size: 13px;
   line-height: 18px; }
 
