--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,6 +1,6 @@
 @font-face {
    font-family: 'Press Start 2P';
-   src: url('/assets/PressStart2P-Regular.ttf');
+   src: font-url('/assets/PressStart2P-Regular.ttf');
 }
 
 body {
@@ -29,10 +29,11 @@ a:hover {
   background-color: #000; }
 
 th {
-  padding-bottom: 5px; }
+   padding: 0 40px 7px 0px; 
+}
 
 td {
-  padding: 0 5px 7px; }
+  padding: 0 40px 7px 0px; }
 
 div.field,
 div.actions {
