Another try at font path for deploy.

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,6 +1,6 @@
 @font-face {
    font-family: 'Press Start 2P';
-   src: font-url('/assets/PressStart2P-Regular.ttf');
+   src: font-url('PressStart2P-Regular.ttf');
 }
 
 body {
